nav-bars and heading

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <title>session template</title>
 </head>
+
 <body>
-    
+
+    <a href="#top" id="go-up"></a>
+
+
+    <header class="mini-nav pad-lr" id="mini-nav">
+        <p>E-Mail: info@medical.com, Phone: 591 341 3445</p>
+        <div class="contact-nav">
+            <p>Additional information text.</p>
+            <i class="fa-brands fa-facebook facebook"></i>
+            <i class="fa-brands fa-instagram instagram"></i>
+            <i class="fa-brands fa-tumblr tumblr"></i>
+            <i class="fa-brands fa-twitter twitter"></i>
+        </div>
+    </header>
+
+    <nav class="nav-bar pad-lr" id="nav-bar">
+
+        <img src="../imgs/medical-dark.png" alt="website-icon">
+
+        <div class="links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Departments</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#"><i class="fa-sharp fa-solid fa-bars"></i></a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="header-1">
+        <div class="header-1-info">
+            <h2>Medical Center</h2>
+            <p>we're the biggest, best equipped and most advanced medical center in denver</p>
+            <button type="text" id="btn-1-header" class="header-btn">Learn More</button>
+            <button type="text" id="btn-2-header" class="header-btn">Contact us</button>
+        </div>
+    </header>
+
     <script src="../js/main.js"></script>
 </body>
+
 </html>
